removed some wording

--- a/kasper/kasper/index.html
+++ b/kasper/kasper/index.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8">
 
         <!-- Site Title -->
-        <title>Kasper</title>
+        <title>OSM</title>
         
         <!--
         Google Fonts
@@ -112,7 +112,7 @@
                     <div class="item active"  style="background-image: url('img/slider/bg2.jpg')" >
                         <div class="carousel-caption">
                             <div class="animated bounceInRight">
-                                <h2>HELLO WORLD! <br>WE ARE KASPER,WE MAKE ART.</h2>
+                                <h2>HELLO WORLD! <br>WE ARE OSM,WE DO STUFF.</h2>
                                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                     <div class="item" style="background-image: url('img/slider/bg2.jpg')">                
                         <div class="carousel-caption">
                             <div class="animated bounceInDown">
-                                <h2>HELLO WORLD! <br>WE ARE KASPER,WE MAKE ART.</h2>
+                                <h2>HELLO WORLD! <br>WE ARE OSM,WE DO STUFF.</h2>
                                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
                     <div class="item" style="background-image: url('img/slider/bg3.jpg')">                 
                          <div class="carousel-caption">
                             <div class="animated bounceInUp">
-                                <h2>HELLO WORLD! <br>WE ARE KASPER,WE MAKE ART.</h2>
+                                <h2>HELLO WORLD! <br>WE ARE OSM,WE DO STUFF.</h2>
                                 <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                             </div>
                         </div>
