added codeKit tracking

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<dix class="col-md-12 well">
 			<div class="page-header">
 				<h1>designMarz</h1>
-				<h3>Working Mock-ups</h3>
+				<h3>Working Prototypes</h3>
 			</div>
 		</dix>
 	</div>
@@ -42,9 +42,8 @@
 		</div>
 	</div> -->
 	<div class="row">
-		<div class="col-md-1"></div>
-		<div class="col-md-8">
-				<div class="caption">
+		<div class="col-sm-8 col-sm-offset-2">
+				<div class="caption text-center">
 					<h3>These will open in a new window for viewing</h3>
 					<p>Artwork and some verbale details are still based off of stock settings</p>
 					<p>First round drafts</p>
@@ -57,11 +56,10 @@
 
 <div class="row">
 
-<div class="col-md-1"></div>
-  <div class="col-md-2">
+
+  <div class="col-sm-2 col-sm-offset-2">
     <div class="thumbnail">
-      <!-- <img src="..." alt="..."> -->
-      <div class="caption">
+      <div class="caption text-center">
         <h3>Working MockUp Option</h3>
         <p>...</p>
         <p><a href="kasper/kasper/index.html" class="btn btn-primary" role="button" target="_blank">Option 1</a></p>
@@ -69,12 +67,10 @@
     </div>
   </div>
 
-  <div class="col-md-2"></div>
 
-	<div class="col-md-2">
+	<div class="col-sm-2 col-sm-offset-1">
     <div class="thumbnail">
-      <!-- <img src="..." alt="..."> -->
-      <div class="caption">
+      <div class="caption text-center">
         <h3>Working MockUp Option</h3>
         <p>...</p>
         <p><a href="Material/index.html" class="btn btn-primary" role="button" target="_blank">Option 2</a></p>
@@ -82,12 +78,10 @@
     </div>
   </div>
 
-  <div class="col-md-2"></div>
 
-  <div class="col-md-2">
+  <div class="col-sm-2 col-sm-offset-1">
     <div class="thumbnail">
-      <!-- <img src="..." alt="..."> -->
-      <div class="caption">
+      <div class="caption text-center">
         <h3>Working MockUp Option</h3>
         <p>...</p>
         <p><a href="smak/html/index.html" class="btn btn-primary" role="button" target="_blank">Option 3</a></p>
