--- a/Material/index.html
+++ b/Material/index.html
@@ -26,10 +26,20 @@
       <div class="container">
         <div class="nav-wrapper"><a id="logo-container" href="#top" class="brand-logo">OSM</a>
           <ul id="nav-mobile" class="right side-nav">
-            <li><a href="#service">Services</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#service">Our Solutions</a></li>
+            <li><a href="#work">Our Work</a></li>
+            <li><a href="#work">Markets We Serve</a></li>
+            <li><a href="#work">Strategic Partners</a></li>
+            <li><a href="#work">Service</a></li>
             <li><a href="#contact">Contact</a></li>
-             <!-- <li><a href="http://goo.gl/Y6596f" target="_blank">Free Download</a></li> -->
+<!-- 
+About Us
+Our Solutions
+Our Work
+Markets We Serve
+Strategic Partners
+Service
+-->
           </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
         </div>
       </div>
@@ -57,63 +67,47 @@
       <!--   Icon Section   -->
     <div class="row">
           <div  class="col s12">
+          <br><br>
             <h2 class="center header text_h2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span class="span_h2"> Phasellus  </span>vestibulum lorem risus, nec suscipit lorem <span class="span_h2"> laoreet quis.</span </h2>
           </div>
 
-            <div  class="col s12 m4 l4">
+            <div  class="col s12 m6 l3">
               <div class="center promo promo-example">
                 <i class="mdi-image-flash-on"></i>
                 <h5 class="promo-caption">Fire</h5>
                 <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, aut. Tempora magnam provident autem, natus nobis inventore veritatis pariatur labore enim ex deleniti maiores sit earum aliquam, quae omnis accusamus.</p>
               </div>
             </div>
-            <div class="col s12 m4 l4">
+            <div class="col s12 m6 l3">
               <div class="center promo promo-example">
                 <i class="mdi-social-group"></i>
                 <h5 class="promo-caption">Security</h5>
                 <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia libero officia, saepe possimus quidem voluptatum asperiores reprehenderit minima quae! Laboriosam doloribus sequi ratione nisi ipsum aliquid, ullam iure est pariatur.</p>
               </div>
             </div>
-            <div class="col s12 m4 l4">
+            <div class="col s12 m6 l3">
               <div class="center promo promo-example">
                 <i class="mdi-action-settings"></i>
                <h5 class="promo-caption">Audio Visual</h5>
                 <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptate culpa laudantium dignissimos harum esse sit vitae delectus eveniet, maiores dolore totam. Incidunt perferendis fuga ut, vitae provident totam accusantium!</p>
               </div>
             </div>
-      </div>
-
-    <div class="row">
-        <div  class="col s12 m4 l4">
-          <div class="center promo promo-example">
-            <!-- <i class="mdi-action-favorite"></i> -->
-            <h5 class="promo-caption"></h5>
-            <!-- <p class="light center">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components.</p> -->
-          </div>
+            <div class="col s12 m6 l3">
+              <div class="center promo promo-example">
+                <i class="mdi-communication-phone"></i>
+                <h5 class="promo-caption">Sound &amp; Communications</h5>
+                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, reprehenderit consequatur atque nemo accusantium aut maxime amet expedita. Optio voluptates adipisci non saepe repudiandae rerum dolorem sapiente commodi odit ipsam?</p>
+              </div>
+            </div>
         </div>
-        <div class="col s12 m4 l4">
-          <div class="center promo promo-example">
-            <i class="mdi-communication-phone"></i>
-            <h5 class="promo-caption">Sound &amp; Communications</h5>
-            <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, reprehenderit consequatur atque nemo accusantium aut maxime amet expedita. Optio voluptates adipisci non saepe repudiandae rerum dolorem sapiente commodi odit ipsam?</p>
-          </div>
-        </div>
-        <div class="col s12 m4 l4">
-          <div class="center promo promo-example">
-            <!-- <i class="mdi-communication-stay-current-portrait"></i> <--></-->
-           <!-- <h5 class="promo-caption">Lorem Ipsum</h5> -->
-            <!-- <p class="light center">We have provided detailed documentation as well as specific code examples to help new users get started.</p> -->
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
 <div class="section scrollspy" id="work">
  <div class="container">
-        <h2 class="header text_b"> Last Work </h2>
+        <h2 class="header text_b"> Lastest Work </h2>
       <div class="row">
-          <div class="col s12 m4 l4">
+          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/03.jpg">
@@ -129,7 +123,7 @@
               </div>
           </div>
 
-          <div class="col s12 m4 l4">
+          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator"  src="img/04.jpg">
@@ -145,7 +139,7 @@
               </div>
           </div>
 
-          <div class="col s12 m4 l4">
+          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator"  src="img/03.jpg">
@@ -160,9 +154,9 @@
                   </div>
               </div>
           </div>
-        </div>
+       <!--  </div>
          <div class="row">
-          <div class="col s12 m4 l4">
+ -->          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="img/04.jpg">
@@ -178,7 +172,7 @@
               </div>
           </div>
 
-          <div class="col s12 m4 l4">
+          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator"  src="img/05.jpg">
@@ -194,7 +188,7 @@
               </div>
           </div>
 
-          <div class="col s12 m4 l4">
+          <div class="col s12 m6 l4">
                <div class="card">
                   <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator"  src="img/03.jpg">
@@ -224,13 +218,13 @@
         <section id="contact">
             <div class="container">
                 <div class="row">
-
-                    <div class="section-title text-center wow fadeInDown">
+<br><br>
+                    <div class="section-title text-center">
                         <h2>Contact Us</h2>
                         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                     </div>
                     
-                    <div class="col-md-8 col-sm-9 wow fadeInLeft">
+                    <div class="col s9 m12 l6">
                         <div class="contact-form clearfix">
                             <form action="index.html" method="post">
                                 <div class="input-field">
@@ -240,22 +234,18 @@
                                     <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
                                 </div>
                                 <div class="input-field message">
-                                    <textarea name="message" class="form-control" placeholder="Your Message" required=""></textarea>
+                                    <textarea name="message" class="form-control" placeholder="Your Message" required="true" style="height: 75px;"></textarea>
                                 </div>
                                 <input type="submit" class="btn btn-blue pull-right" value="SEND MESSAGE" id="msg-submit">
                             </form>
                         </div> <!-- end .contact-form -->
                     </div> <!-- .col-md-8 -->
 
-                    <div class="col-md-4 col-sm-3 wow fadeInRight">
+                    <div class="col s9 m6 l3 offset-l2">
                         <div class="contact-details">
-                            <span>GET IN TOUCH</span>
-                            <p>+00 123.456.789 <br> <br> +00 123.456.789</p>
-                        </div> <!-- end .contact-details -->
-
-                        <div class="contact-details">
-                            <span>GET IN TOUCH</span>
-                            <p>+00 123.456.789 <br> <br> +00 123.456.789</p>
+                            <h4>GET IN TOUCH</h4>
+                            <h6>+00 123.456.789</h6>
+                            <h6>+00 123.456.789</h6>
                         </div> <!-- end .contact-details -->
                     </div> <!-- .col-md-4 -->
 
@@ -301,7 +291,7 @@
     </div>
     <div class="footer-copyright default_color">
       <div class="container">
-      Made by <a class="white-text" href="http://www.designmarz.com">Nick Marazzo</a>
+      <!-- Made by <a class="white-text" href="http://www.designmarz.com">Nick Marazzo</a> -->
       </div>
     </div>
   </footer>
