--- a/smak/HTML/index.html
+++ b/smak/HTML/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--
- * A Design by GraphBerry
- * Author: GraphBerry
- * Author URL: http://graphberry.com
- * License: http://graphberry.com/pages/license
--->
+
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -21,7 +16,7 @@
     <![endif]-->
 </head>
 <body>
-	<div class="loader">
+	<div class="loader">Open System Metro
 		<div class="project-loader">
 			<div class="bubblingG">
 				<span id="bubblingG_1"></span>
@@ -58,15 +53,19 @@
 					<ul class="text-slider clearfix">
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<!-- <a href="http://graphberry.com/item/smak-one-page-web-template" class="btn btn-primary outline-outward">Get it</a> -->
+							<h1 class="lead">FIRE</h1>
 						</li>
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<!-- <a href="http://graphberry.com/item/smak-one-page-web-template" class="btn btn-primary outline-outward">Get it</a> -->
+							<h1 class="lead">SECURITY</h1>
 						</li>
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<!-- <a href="http://graphberry.com/item/smak-one-page-web-template" class="btn btn-primary outline-outward">Get it</a> -->
+							<h1 class="lead">AUDIO VISUAL</h1>
+						</li>
+						<li class="clearfix">
+							<span class="lead">Open Systems Metro</span>
+							<h1 class="lead">SOUND &amp; COMMUNICATIONS</h1>
 						</li>
 					</ul>
 				</div>
@@ -75,7 +74,7 @@
 				<span>
 					<span class="fa fa-angle-double-down fa-2x"></span>
 					<span class="fa fa-angle-double-down fa-2x"></span>
-					<span class="fa fa-angle-double-down fa-2x"></span>
+					<span class="fa fa-angle-double-up fa-2x"></span>
 					<span class="fa fa-angle-double-down fa-2x"></span>
 					<span class="fa fa-angle-double-down fa-2x"></span>
 				</span>
@@ -435,14 +434,14 @@
 					<div class="row">
 						<ul class="team " id="og-grid">
 							<li class="col-md-3">
-								<a href="" class="team-member" data-title="John Doe" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper nulla ut augue consectetur, at consequat enim malesuada." data-twitter="GraphBerry" data-facebook="facebook">
+								<a href="" class="team-member" data-title="John Doe" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper nulla ut augue consectetur, at consequat enim malesuada." data-twitter="Open System Metro" data-facebook="facebook">
 									<img src="img/Team/user_placeholder.png" alt="" class="img-responsive">
 									<span class="name">John Doe</span>
 									<span class="title">Ceo</span>
 								</a>
 							</li>
 							<li class="col-md-3">
-								<a href="sdd" class="team-member" data-title="Josh Thompson" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper nulla ut augue consectetur, at consequat enim malesuada." data-twitter="GraphBerry" data-facebook="facebook">
+								<a href="sdd" class="team-member" data-title="Josh Thompson" data-description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper nulla ut augue consectetur, at consequat enim malesuada." data-twitter="Open System Metro" data-facebook="facebook">
 									<img src="img/Team/user_placeholder.png" alt="" class="img-responsive">
 									<span class="name">Josh Thompson</span>
 									<span class="title">Co-Founder</span>
