converting to rem units, base 10px on body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
 
 	<div class="row">
-		<dix class="col-md-12 well">
+		<dix class="col-xs-12 well">
 			<div class="page-header">
 				<h1>designMarz</h1>
 				<h3>Working Prototypes</h3>
