--- a/smak/HTML/index.html
+++ b/smak/HTML/index.html
@@ -53,19 +53,19 @@
 					<ul class="text-slider clearfix">
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<h1 class="lead">FIRE</h1>
+							<h1 class="branded-section ">FIRE</h1>
 						</li>
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<h1 class="lead">SECURITY</h1>
+							<h1 class="branded-section ">SECURITY</h1>
 						</li>
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<h1 class="lead">AUDIO VISUAL</h1>
+							<h1 class="branded-section ">AUDIO VISUAL</h1>
 						</li>
 						<li class="clearfix">
 							<span class="lead">Open Systems Metro</span>
-							<h1 class="lead">SOUND &amp; COMMUNICATIONS</h1>
+							<h1 class="branded-section ">SOUND &amp; COMMUNICATIONS</h1>
 						</li>
 					</ul>
 				</div>
