switched which jQuery slider to use on client area, need to remove other slider files and commented-out code

--- a/Material/index.html
+++ b/Material/index.html
@@ -11,6 +11,7 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" >
   <script src="js/modernizr.js"></script> <!-- Modernizr -->
   
+  
 </head>
 <body id="top" class="scrollspy">
 
@@ -340,20 +341,45 @@ Service
             </h2>
           </div>
           <div class="col s12 partners-section">
+          <!-- slider -->
+<div class="slider-container">
+
+  <ul id="slider">
+        <li><a href="#"><img src="img/logo/1.png"></a></li>
+        <li><a href="#"><img src="img/logo/2.png"></a></li>
+        <li><a href="#"><img src="img/logo/3.png"></a></li>
+        <li><a href="#"><img src="img/logo/4.png"></a></li>
+        <li><a href="#"><img src="img/logo/5.png"></a></li>
+        <li><a href="#"><img src="img/logo/6.png"></a></li>
+        <li><a href="#"><img src="img/logo/7.png"></a></li>
+        <li><a href="#"><img src="img/logo/8.png"></a></li>
+        <li><a href="#"><img src="img/logo/9.png"></a></li>
+        <li><a href="#"><img src="img/logo/10.png"></a></li>
+  </ul>
+
+</div><!-- /slider -->
+
+
+
+
+
+
+
+
               <!-- Jssor Slider Begin -->
                     <!-- To move inline styles to css file/block, please specify a class name for each element. --> 
-                    <div id="slider1_container" class="slider1_container">
+                    <!-- <div id="slider1_container" class="slider1_container"> -->
 
                         <!-- Loading Screen -->
-                        <div u="loading" id="loading" class="loading">
+                       <!--  <div u="loading" id="loading" class="loading">
                             <div id="filter-slider">
                             </div>
                             <div id="loadingGif" class="loadingGif">
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Slides Container -->
-                        <div id="slides" u="slides" class="slides">
+                       <!--  <div id="slides" u="slides" class="slides">
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="amazon" src="img/logo/amazon.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="android" src="img/logo/android.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="bitly" src="img/logo/bitly.jpg" /></div>
@@ -397,7 +423,7 @@ Service
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="wordpress" src="img/logo/wordpress.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="youtube" src="img/logo/youtube.jpg" /></div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Jssor Slider End -->
              <!--  <ul>
                 <li>Bi-Amp</li>
@@ -533,6 +559,6 @@ Service
     <script type="text/javascript" src="js/jssor.slider.js"></script>
 
   <script src="js/slider.js"></script>
-
+  <script src="js/jquery.bxSlider.js"></script>
   </body>
 </html>
