--- a/Material/index.html
+++ b/Material/index.html
@@ -27,7 +27,7 @@
  <div class="navbar-fixed">
     <nav id="nav_f" class="default_color" role="navigation">
       <div class="container">
-        <div class="nav-wrapper"><a id="logo-container" href="#top" class="brand-logo">Open Systmes Metro</a>
+        <div class="nav-wrapper"><a id="logo-container" href="#top" class="brand-logo">Open Systems Metro</a>
           <ul id="nav-mobile" class="right side-nav">
             <li><a href="#service">Solutions</a></li>
             <li><a href="#markets">Markets</a></li>
@@ -183,42 +183,42 @@ Service
               <div class="center promo promo-example">
                 <i class="mdi-maps-local-hospital"></i>
                 <h5 class="promo-caption">Healthcare</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, aut. Tempora magnam provident autem, natus nobis inventore veritatis pariatur labore enim ex deleniti maiores sit earum aliquam, quae omnis accusamus.</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             <div class="col s6 m4 l4">
               <div class="center promo promo-example">
                 <i class="mdi-communication-business"></i>
                 <h5 class="promo-caption">Corporate</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia libero officia, saepe possimus quidem voluptatum asperiores reprehenderit minima quae! Laboriosam doloribus sequi ratione nisi ipsum aliquid, ullam iure est pariatur.</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             <div class="col s6 m4 l4">
               <div class="center promo promo-example">
                 <i class="mdi-action-account-balance"></i>
                <h5 class="promo-caption">University</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptate culpa laudantium dignissimos harum esse sit vitae delectus eveniet, maiores dolore totam. Incidunt perferendis fuga ut, vitae provident totam accusantium!</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             <div class="col s6 m4 l4">
               <div class="center promo promo-example">
-                <i class="mdi-action-work"></i>
+                <i class="mdi-maps-store-mall-directory"></i>
                 <h5 class="promo-caption">Commercial</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, reprehenderit consequatur atque nemo accusantium aut maxime amet expedita. Optio voluptates adipisci non saepe repudiandae rerum dolorem sapiente commodi odit ipsam?</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             <div class="col s6 m4 l4">
               <div class="center promo promo-example">
                 <i class="mdi-maps-local-library"></i>
                <h5 class="promo-caption">Museum</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptate culpa laudantium dignissimos harum esse sit vitae delectus eveniet, maiores dolore totam. Incidunt perferendis fuga ut, vitae provident totam accusantium!</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             <div class="col s6 m4 l4">
               <div class="center promo promo-example">
                 <i class="mdi-social-school"></i>
                 <h5 class="promo-caption">K-12 Schools</h5>
-                <p class="light center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, reprehenderit consequatur atque nemo accusantium aut maxime amet expedita. Optio voluptates adipisci non saepe repudiandae rerum dolorem sapiente commodi odit ipsam?</p>
+                <p class="light center">Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
               </div>
             </div>
             
@@ -402,7 +402,7 @@ Service
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="ibm" src="img/logo/ibm.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="ios" src="img/logo/ios.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="joomla" src="img/logo/joomla.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="linkedin" src="img/logo/linkedin.jpg" /></div>
+                            <div class="image-slide-container"><img id="image-slide" u="image" alt="LinkedIn" src="img/logo/LinkedIn.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="mac" src="img/logo/mac.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="magento" src="img/logo/magento.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="pinterest" src="img/logo/pinterest.jpg" /></div>
@@ -423,7 +423,7 @@ Service
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="ibm" src="img/logo/ibm.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="ios" src="img/logo/ios.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="joomla" src="img/logo/joomla.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="linkedin" src="img/logo/linkedin.jpg" /></div>
+                            <div class="image-slide-container"><img id="image-slide" u="image" alt="LinkedIn" src="img/logo/LinkedIn.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="mac" src="img/logo/mac.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="magento" src="img/logo/magento.jpg" /></div>
                             <div class="image-slide-container"><img id="image-slide" u="image" alt="pinterest" src="img/logo/pinterest.jpg" /></div>
@@ -545,7 +545,7 @@ Service
         <div class="col l6 s12">
           <h5 class="white-text">Social</h5>
           <ul>
-            <li><a class="white-text" href="#">Linkedin</a></li>
+            <li><a class="white-text" href="#">LinkedIn</a></li>
             <li><a class="white-text" href="#">Facebook</a></li>
             <li><a class="white-text" href="#">Twitter</a></li>
             <li><a class="white-text" href="#">Google+</a></li>
