removed other options

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="row">
 
 
-  <div class="col-sm-2 col-sm-offset-2">
+<!--   <div class="col-sm-2 col-sm-offset-2">
     <div class="thumbnail">
       <div class="caption text-center">
         <h3>Working MockUp Option</h3>
@@ -65,20 +65,20 @@
         <p><a href="kasper/kasper/index.html" class="btn btn-primary" role="button" target="_blank">Option 1</a></p>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
-	<div class="col-sm-2 col-sm-offset-1">
+	<div class="col-sm-2 col-sm-offset-5">
     <div class="thumbnail">
       <div class="caption text-center">
         <h3>Working MockUp Option</h3>
         <p>...</p>
-        <p><a href="Material/index.html" class="btn btn-primary" role="button" target="_blank">Option 2</a></p>
+        <p><a href="Material/index.html" class="btn btn-primary" role="button" target="_blank">OSM Prototype</a></p>
       </div>
     </div>
   </div>
 
-
+<!-- 
   <div class="col-sm-2 col-sm-offset-1">
     <div class="thumbnail">
       <div class="caption text-center">
@@ -87,7 +87,7 @@
         <p><a href="smak/html/index.html" class="btn btn-primary" role="button" target="_blank">Option 3</a></p>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 <div class="col-md-1"></div>
