--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 	<div class="col-sm-2 col-sm-offset-5">
     <div class="thumbnail">
       <div class="caption text-center">
-        <h3>Working MockUp Option</h3>
+        <h3>OSM Prototype</h3>
         <p>...</p>
-        <p><a href="Material/index.html" class="btn btn-primary" role="button" target="_blank">OSM Prototype</a></p>
+        <p><a href="Material/index.html" class="btn btn-primary" role="button" target="_blank">View Prototype</a></p>
       </div>
     </div>
   </div>
