--- a/Material/index.html
+++ b/Material/index.html
@@ -63,7 +63,7 @@ Service
             <b>Sound &amp; Communications</b>
             <h5 class="center white-text flow-text">Open Systems Metro is a provider of integrated technology solutions and specializes in design, sale, engineering, installation, service and maintenance of intelligent low-voltage systems.</h5>
           </span><a href="#service">
-<h3 class="white-text center"><i class="fa fa-arrow-circle-o-down"></i></h3>
+<h3 class="white-text center"><i class="fa fa-arrow-circle-o-down fa-2"></i></h3>
 </a>
       </h1>
       
@@ -173,8 +173,8 @@ Service
     <div class="row">
           <div  class="col s12">
           <br><br>
-            <h2 class="center header text_h2">Markets we Serve
-            <!-- <span class="span_h2"> laoreet quis.</span> -->
+            <h2 class="center header text_h2">Markets we 
+            <span class="span_h2"> Serve</span>
             </h2>
             <h5 class="center text_h5">Open Systems Metro is pleased to serve the following markets</h5>
           </div>
@@ -240,7 +240,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <!-- <p><a href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -256,7 +256,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <!-- <p><a href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -272,7 +272,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <!-- <p><a href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -289,7 +289,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <!-- <p><a href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -305,7 +305,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a href="#">This is a link</a></p>
+                    <!-- <p><a href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -321,7 +321,7 @@ Service
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-                    <p><a  href="#">This is a link</a></p>
+                    <!-- <p><a  href="#">This is a link</a></p> -->
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
@@ -352,114 +352,21 @@ Service
           </div>
           <div class="col s12 partners-section">
           <!-- slider -->
-<div class="slider-container">
+            <div class="slider-container">
+              <ul id="slider">
+                    <li><a href="#"><img src="img/clients/logo1.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo2.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo3.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo4.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo5.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo6.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo7.png"></a></li>
+                    <!-- <li><a href="#"><img src="img/clients/logo8.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo9.png"></a></li>
+                    <li><a href="#"><img src="img/clients/logo10.png"></a></li> -->
+              </ul>
 
-  <ul id="slider">
-        <li><a href="#"><img src="img/clients/logo1.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo2.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo3.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo4.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo5.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo6.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo7.png"></a></li>
-        <!-- <li><a href="#"><img src="img/clients/logo8.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo9.png"></a></li>
-        <li><a href="#"><img src="img/clients/logo10.png"></a></li> -->
-  </ul>
-
-</div><!-- /slider -->
-
-
-
-
-
-
-
-
-              <!-- Jssor Slider Begin -->
-                    <!-- To move inline styles to css file/block, please specify a class name for each element. --> 
-                    <!-- <div id="slider1_container" class="slider1_container"> -->
-
-                        <!-- Loading Screen -->
-                       <!--  <div u="loading" id="loading" class="loading">
-                            <div id="filter-slider">
-                            </div>
-                            <div id="loadingGif" class="loadingGif">
-                            </div>
-                        </div> -->
-
-                        <!-- Slides Container -->
-                       <!--  <div id="slides" u="slides" class="slides">
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="amazon" src="img/logo/amazon.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="android" src="img/logo/android.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="bitly" src="img/logo/bitly.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="blogger" src="img/logo/blogger.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="dnn" src="img/logo/dnn.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="drupal" src="img/logo/drupal.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ebay" src="img/logo/ebay.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="facebook" src="img/logo/facebook.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="google" src="img/logo/google.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ibm" src="img/logo/ibm.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ios" src="img/logo/ios.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="joomla" src="img/logo/joomla.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="LinkedIn" src="img/logo/LinkedIn.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="mac" src="img/logo/mac.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="magento" src="img/logo/magento.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="pinterest" src="img/logo/pinterest.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="samsung" src="img/logo/samsung.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="twitter" src="img/logo/twitter.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="windows" src="img/logo/windows.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="wordpress" src="img/logo/wordpress.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="youtube" src="img/logo/youtube.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="amazon" src="img/logo/amazon.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="android" src="img/logo/android.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="bitly" src="img/logo/bitly.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="blogger" src="img/logo/blogger.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="dnn" src="img/logo/dnn.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="drupal" src="img/logo/drupal.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ebay" src="img/logo/ebay.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="facebook" src="img/logo/facebook.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="google" src="img/logo/google.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ibm" src="img/logo/ibm.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="ios" src="img/logo/ios.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="joomla" src="img/logo/joomla.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="LinkedIn" src="img/logo/LinkedIn.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="mac" src="img/logo/mac.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="magento" src="img/logo/magento.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="pinterest" src="img/logo/pinterest.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="samsung" src="img/logo/samsung.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="twitter" src="img/logo/twitter.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="windows" src="img/logo/windows.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="wordpress" src="img/logo/wordpress.jpg" /></div>
-                            <div class="image-slide-container"><img id="image-slide" u="image" alt="youtube" src="img/logo/youtube.jpg" /></div>
-                        </div>
-                    </div> -->
-                    <!-- Jssor Slider End -->
-             <!--  <ul>
-                <li>Bi-Amp</li>
-                <li>Bosch</li>
-                <li>Crestron</li>
-                <li>Honeywell</li>
-                <li>Identiv (Hirsch)</li>
-                <li>Innovax</li>
-                <li>Key West Technologies</li>
-                <li>Pelco</li>
-                <li>Polycom</li>
-                <li>Potter</li>
-                <li>Primex</li>
-                <li>RBH Access</li>
-                <li>Lenel</li>
-                <li>Panasonic</li>
-                <li>Rauland-Borg</li>
-                <li>Response Care</li>
-                <li>Samsung</li>
-                <li>Sapling</li>
-                <li>Sharp</li>
-                <li>Siemens</li>
-                <li>Sony</li>
-                <li>TOA</li>
-                <li>Tandberg/Cisco</li>
-              </ul> -->
+            </div><!-- /slider -->
           </div>
     </div>
   </div>
@@ -554,7 +461,7 @@ Service
       </div>
     </div>
     <div class="footer-copyright default_color">
-      <div class="container"> Copy 2015
+      <div class="container">Copyright &copy;2015
       <!-- Made by <a class="white-text" href="http://www.designmarz.com">Nick Marazzo</a> -->
       </div>
     </div>
