Copy updates, added js to close mobile nav after clickign on a nav link

--- a/Material/index.html
+++ b/Material/index.html
@@ -231,7 +231,7 @@ Service
 
 <div class="section scrollspy z-depth-1" id="work">
  <div class="container">
-        <h2 class="header text_b"> Lastest Work </h2>
+        <h2 class="header text_b"> Latest Work </h2>
       <div class="row">
           <div class="col s12 m6 l4">
                <div class="card">
@@ -354,25 +354,25 @@ Service
           <!-- slider -->
             <div class="slider-container">
               <ul id="slider">
-                    <li><a href="#"><img src="img/clients/Biamp_Systems_Logo.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Bosch_Logo3.png"></a></li>
-                    <!-- <li><a href="#"><img src="img/clients/certifiedmark1200.png"></a></li> -->
-                    <li><a href="#"><img src="img/clients/Cisco_logo.svg.png"></a></li>
-                    <!-- <li><a href="#"><img src="img/clients/crestron-logo.png"></a></li> -->
-                    <li><a href="#"><img src="img/clients/honeywell_logo.png"></a></li>
-                    <li><a href="#"><img src="img/clients/identiv.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Innovax_Logo_Website.png"></a></li>
-                    <!-- <li><a href="#"><img src="img/clients/layout_set_logo.png"></a></li> -->
-                    <li><a href="#"><img src="img/clients/Lenel_logo.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Panasonic_logo.png"></a></li>
-                    <li><a href="#"><img src="img/clients/polycom.png"></a></li>
-                    <li><a href="#"><img src="img/clients/rbh.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Samsung.png"></a></li>
-                    <li><a href="#"><img src="img/clients/sapling-logo-mobile.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Sharp_logo.png"></a></li>
-                    <li><a href="#"><img src="img/clients/Sony_logo.png"></a></li>
-                    <!-- <li><a href="#"><img src="img/clients/logo10.png"></a></li>
-                    <li><a href="#"><img src="img/clients/logo10.png"></a></li> -->
+                    <li><img class="img-responsive" src="img/clients/Biamp_Systems_Logo.png"></li>
+                    <li><img class="img-responsive" src="img/clients/Bosch_Logo3.png"></li>
+                    <!-- <li><img class="img-responsive" src="img/clients/certifiedmark1200.png"></li> -->
+                    <!-- <li><img class="img-responsive" src="img/clients/Cisco_logo.svg.png"></li> -->
+                    <!-- <li><img class="img-responsive" src="img/clients/crestron-logo.png"></li> -->
+                    <li><img class="img-responsive" src="img/clients/honeywell_logo.png"></li>
+                    <li><img class="img-responsive" src="img/clients/identiv.png"></li>
+                    <!-- <li><img class="img-responsive" src="img/clients/Innovax_Logo_Website.png"></li> -->
+                    <!-- <li><img class="img-responsive" src="img/clients/layout_set_logo.png"></li> -->
+                    <li><img class="img-responsive" src="img/clients/Lenel_logo.png"></li>
+                    <li><img class="img-responsive" src="img/clients/Panasonic_logo.png"></li>
+                    <!-- <li><img class="img-responsive" src="img/clients/polycom.png"></li> -->
+                    <!-- <li><img class="img-responsive" src="img/clients/rbh.png"></li> -->
+                    <li><img class="img-responsive" src="img/clients/Samsung.png"></li>
+                    <li><img class="img-responsive" src="img/clients/sapling-logo-mobile.png"></li>
+                    <li><img class="img-responsive" src="img/clients/Sharp_logo.png"></li>
+                    <li><img class="img-responsive" src="img/clients/Sony_logo.png"></li>
+                    <!-- <li><img class="img-responsive" src="img/clients/logo10.png"></li>
+                    <li><img class="img-responsive" src="img/clients/logo10.png"></li> -->
               </ul>
 
             </div><!-- /slider -->
